--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ mypy = "^1.0.0"
 flake8 = "^6.0.0"
 flake8-pyproject = "^1.2.2"
 flake8-print = "^5.0.0"
+pytest = "^7.2.1"
+pytest-asyncio = "^0.20.3"
+pytest-raises = "^0.11"
 
 [tool.black]
 line-length = 79
