added sqlalchemy and alembic

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 # example .env file
+
+# Database
+POSTGRES_USER          = postgres
+POSTGRES_PASSWORD      = postgres
+POSTGRES_HOST          = localhost
+HOST_POSTGRES_PORT     = 5433
+POSTGRES_PORT          = 5432
+POSTGRES_DB            = playlist
