--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["neekrasov <neekrasov@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "3.11"
+alembic = "^1.9.4"
+asyncpg = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
