--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["neekrasov <neekrasov@gmail.com>"]
 python = "3.11"
 alembic = "^1.9.4"
 asyncpg = "^0.27.0"
+grpcio = "^1.51.3"
+grpcio-tools = "^1.51.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
@@ -23,7 +25,7 @@ pytest-raises = "^0.11"
 line-length = 79
 
 [tool.flake8]
-exclude = ['.git','__pycache__', '.env', 'venv']
+exclude = ['.git','__pycache__', '.env', 'venv','./playlist/adapters/grpc/servicers',]
 max-line-length = 79
 max-complexivity = 8
 
