setupped di, added create, get, delete playlists rpc methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ alembic = "^1.9.4"
 asyncpg = "^0.27.0"
 grpcio = "^1.51.3"
 grpcio-tools = "^1.51.3"
+di = {extras = ["anyio"], version = "^0.75.2"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
