fixed .env and update README.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-# example .env file
-
 # Database
 POSTGRES_USER          = postgres
 POSTGRES_PASSWORD      = postgres
@@ -7,3 +5,9 @@ POSTGRES_HOST          = localhost
 HOST_POSTGRES_PORT     = 5433
 POSTGRES_PORT          = 5432
 POSTGRES_DB            = playlist
+
+
+#GRPC Server
+CACHE_CHECK_PERIOD     = 1
+GRPC_HOST              = [::]
+GRPC_PORT              = 50051
