--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -8,6 +8,7 @@ POSTGRES_DB            = playlist
 
 
 #GRPC Server
+CACHE_CHECK_PERIOD     = 1
 HOST_GRPC_PORT         = 50052
 GRPC_HOST              = [::]
 GRPC_PORT              = 50051
